[gd_scene load_steps=11 format=3 uid="uid://bb8ubw7kep81d"]

[ext_resource type="Script" path="res://scripts/user_interface/uiDialogueBalloon.gd" id="1_c8jm1"]
[ext_resource type="AudioStream" uid="uid://3g8lmthlik76" path="res://audio/sounds/text_default.ogg" id="2_007ph"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="3_3gpam"]
[ext_resource type="Texture2D" uid="uid://bx2ajgaow4aiu" path="res://images/sprites/dialogue_arrow.png" id="4_ffco3"]
[ext_resource type="Texture2D" uid="uid://ch3hfjxwctukl" path="res://images/sprites/dialogue_tail.png" id="6_8ju85"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d24i"]
content_margin_left = 40.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oj3c8"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.431373)

[sub_resource type="Animation" id="Animation_em4d8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Balloon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mmh1p"]
resource_name = "Show"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Balloon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kawqj"]
_data = {
"RESET": SubResource("Animation_em4d8"),
"Show": SubResource("Animation_mmh1p")
}

[node name="Balloon" type="Node2D" node_paths=PackedStringArray("response_template")]
top_level = true
script = ExtResource("1_c8jm1")
response_template = NodePath("ResponseTemplate")

[node name="TalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_007ph")

[node name="Responses" type="VBoxContainer" parent="."]
clip_contents = true
offset_left = 176.0
offset_right = 344.0
offset_bottom = 24.0

[node name="Balloon" type="MarginContainer" parent="."]
offset_right = 168.0
offset_bottom = 34.0
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="Balloon"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Balloon"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="DialogueLabel" parent="Balloon/MarginContainer" instance=ExtResource("3_3gpam")]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
theme_override_font_sizes/italics_font_size = 8
theme_override_font_sizes/bold_italics_font_size = 8
theme_override_font_sizes/mono_font_size = 8
pause_at_characters = ""

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon"]
visible = false
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
theme_override_font_sizes/italics_font_size = 8
theme_override_font_sizes/bold_italics_font_size = 8
theme_override_font_sizes/mono_font_size = 8
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="Balloon"]
visible = false
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("4_ffco3")
stretch_mode = 3

[node name="Portrait" type="Control" parent="Balloon"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Face" type="Sprite2D" parent="Balloon/Portrait"]
position = Vector2(-43, -37)
scale = Vector2(2, 2)

[node name="TextureRect2" type="TextureRect" parent="Balloon/Portrait"]
layout_mode = 0
offset_left = -12.0
offset_top = -26.0
offset_right = 2.0
offset_bottom = -2.0
pivot_offset = Vector2(13, 24)
texture = ExtResource("6_8ju85")

[node name="ResponseTemplate" type="RichTextLabel" parent="."]
offset_left = 8.0
offset_top = 96.0
offset_right = 128.0
offset_bottom = 116.0
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
theme_override_font_sizes/italics_font_size = 8
theme_override_font_sizes/bold_italics_font_size = 8
theme_override_font_sizes/mono_font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_5d24i")
theme_override_styles/normal = SubResource("StyleBoxFlat_oj3c8")
bbcode_enabled = true
text = "Response"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kawqj")
}

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="spoke" from="Balloon/MarginContainer/DialogueLabel" to="." method="_on_dialogue_label_spoke"]
